# ros2-practicing

./: readme.md
my_pkg_cpp/: CMakeLists.txt  package.xml
my_pkg_cpp/src/: cpp_test.cpp
my_pkg_py/: package.xml  setup.py
my_pkg_py/my_pkg_py/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery_node.py  compute_area_server.py  hw_status_publisher.py  led_node.py  my_node.py  num_counter.py  num_publisher.py  robot_news_station.py  smartphone.py
my_robot_bringup/: package.xml  setup.py
my_robot_bringup/launch/: news_station.launch.py  num_counter.launch.py
my_robot_interface/: CMakeLists.txt  package.xml
my_robot_interface/msg/: HardwareStatus.msg  LedStateArr.msg
my_robot_interface/srv/: ComputeArea.srv  SetLedState.srv
turtle_controller/: package.xml  setup.py
turtle_eater/: package.xml  setup.cfg  setup.py
turtle_eater/launch/: eater.launch.py
turtle_eater/turtle_eater/: turtle_controller.py  world_manager.py
turtle_eater_interface/: CMakeLists.txt  package.xml
turtle_eater_interface/msg/: AliveTurtles.msg
yaml_params/: num_publisher_params.yaml
